--- a/src/Views/RevisionCompare.axaml
+++ b/src/Views/RevisionCompare.axaml
@@ -105,14 +105,7 @@
                                   ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=CommitChangeViewMode}"
                                   Changes="{Binding VisibleChanges}"
                                   SelectedChanges="{Binding SelectedChanges, Mode=TwoWay}"
-                                  ContextRequested="OnChangeContextRequested"
-                                  ChangeDoubleTapped="OnChangeDoubleTapped">
-            <v:ChangeCollectionView.Styles>
-              <Style Selector="TreeDataGridExpanderCell" x:DataType="vm:FileTreeNode">
-                <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-              </Style>
-            </v:ChangeCollectionView.Styles>
-          </v:ChangeCollectionView>
+                                  ContextRequested="OnChangeContextRequested"/>
         </Border>
       </Grid>
 
