--- a/src/Views/ChangeCollectionView.axaml
+++ b/src/Views/ChangeCollectionView.axaml
@@ -16,7 +16,7 @@
                 CanUserSortColumns="False"
                 ScrollViewer.BringIntoViewOnFocusChange="True">
     <TreeDataGrid.Resources>
-      <DataTemplate x:Key="TreeModeTemplate" DataType="vm:FileTreeNode">
+      <DataTemplate x:Key="TreeModeTemplate" DataType="m:FileTreeNode">
         <Grid HorizontalAlignment="Stretch" Height="24" ColumnDefinitions="Auto,*">
           <Path Grid.Column="0" Classes="folder_icon" Width="14" Height="14" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" Fill="Goldenrod" VerticalAlignment="Center"/>
           <v:ChangeStatusIcon Grid.Column="0" Width="14" Height="14" IsWorkingCopyChange="{Binding #me.IsWorkingCopyChange}" Change="{Binding Backend}" IsVisible="{Binding !IsFolder}"/>
