--- a/src/Views/RevisionFiles.axaml
+++ b/src/Views/RevisionFiles.axaml
@@ -48,7 +48,7 @@
                       Source="{Binding RevisionFiles}"
                       ContextRequested="OnFileContextRequested">
           <TreeDataGrid.Resources>
-            <DataTemplate x:Key="FileTreeNodeExpanderTemplate" DataType="vm:FileTreeNode">
+            <DataTemplate x:Key="FileTreeNodeExpanderTemplate" DataType="m:FileTreeNode">
               <Grid HorizontalAlignment="Stretch" Height="24" ColumnDefinitions="Auto,*">
                 <Path Grid.Column="0" Classes="folder_icon" Width="14" Height="14" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" Fill="Goldenrod" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="14" Height="14" IsVisible="{Binding !IsFolder}" Data="{StaticResource Icons.File}" VerticalAlignment="Center"/>
