--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -106,12 +106,10 @@
                     BorderThickness="1,0,0,0"
                     BorderBrush="{DynamicResource Brush.Border2}"/>
 
-      <Path Grid.Column="2"
-            Classes="rotating"
-            Width="48" Height="48"
-            Data="{DynamicResource Icons.Loading}"
-            HorizontalAlignment="Center" VerticalAlignment="Center"
-            IsVisible="{Binding IsLoading}"/>
+      <v:LoadingIcon Grid.Column="2" 
+                     Width="48" Height="48" 
+                     HorizontalAlignment="Center" VerticalAlignment="Center"
+                     IsVisible="{Binding IsLoading}"/>
 
       <Grid Grid.Column="2" RowDefinitions="*,3,*" Margin="0,4,4,4" IsVisible="{Binding !IsLoading}">
         <ContentControl Grid.Row="0" Content="{Binding DiffContext}">
