--- a/src/Views/Statistics.axaml
+++ b/src/Views/Statistics.axaml
@@ -180,11 +180,9 @@
     </ContentControl>
 
     <!-- Loading Mask -->
-    <Path Grid.Row="2" 
-          Classes="rotating"
-          Width="48" Height="48"
-          Data="{DynamicResource Icons.Loading}"
-          HorizontalAlignment="Center" VerticalAlignment="Center"
-          IsVisible="{Binding IsLoading}"/>
+    <v:LoadingIcon Grid.Row="2" 
+                   Width="48" Height="48" 
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   IsVisible="{Binding IsLoading}"/>
   </Grid>
 </Window>
