--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -20,7 +20,7 @@
     <Grid Grid.Column="0" RowDefinitions="28,*,28,*">
       <!-- Unstaged Toolbar -->
       <Border Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}">
-        <Grid ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto,Auto">
+        <Grid ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto,Auto,Auto">
           <v:ChangeViewModeSwitcher Grid.Column="0" Width="12" Height="12" Margin="8,0,0,0" ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=UnstagedChangeViewMode, Mode=TwoWay}"/>
           <TextBlock Grid.Column="1" Text="{DynamicResource Text.WorkingCopy.Unstaged}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold" Margin="8,0,0,0"/>
           <TextBlock Grid.Column="2" FontWeight="Bold" Foreground="{DynamicResource Brush.FG2}" Text="{Binding Unstaged, Converter={x:Static c:ListConverters.ToCount}}"/>
@@ -30,16 +30,23 @@
                   Classes="icon_button"
                   Width="26" Height="14"
                   Padding="0"
+                  Command="{Binding ClearAllChanges}">
+            <Path Width="14" Height="14" Data="{StaticResource Icons.Clear2}"/>
+          </Button>
+          <Button Grid.Column="6"
+                  Classes="icon_button"
+                  Width="26" Height="14"
+                  Padding="0"
                   ToolTip.Tip="{DynamicResource Text.WorkingCopy.Unstaged.ViewAssumeUnchaged}"
                   Command="{Binding OpenAssumeUnchanged}">
             <Path Width="14" Height="14" Data="{StaticResource Icons.File.Ignore}"/>
           </Button>
-          <ToggleButton Grid.Column="6"
+          <ToggleButton Grid.Column="7"
                         Classes="toggle_untracked"
                         Width="26" Height="14"
                         ToolTip.Tip="{DynamicResource Text.WorkingCopy.IncludeUntracked}"
                         IsChecked="{Binding $parent[v:Repository].DataContext.(vm:Repository).IncludeUntracked, Mode=TwoWay}"/>
-          <Button Grid.Column="7"
+          <Button Grid.Column="8"
                   Classes="icon_button"
                   Width="26" Height="14"
                   Padding="0"
@@ -52,7 +59,7 @@
             </ToolTip.Tip>
             <Path Width="14" Height="14" Margin="0,6,0,0" Data="{StaticResource Icons.Down}"/>
           </Button>
-          <Button Grid.Column="8"
+          <Button Grid.Column="9"
                   Classes="icon_button"
                   Width="26" Height="14"
                   Padding="0"
