feat: Allow Copy only file name with extension

--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -114,6 +114,7 @@
   <x:String x:Key="Text.Configure.User.Placeholder" xml:space="preserve">User name for this repository</x:String>
   <x:String x:Key="Text.Copy" xml:space="preserve">Copy</x:String>
   <x:String x:Key="Text.CopyPath" xml:space="preserve">Copy Path</x:String>
+  <x:String x:Key="Text.CopyFileName" xml:space="preserve">Copy File Name</x:String>
   <x:String x:Key="Text.CreateBranch" xml:space="preserve">Create Branch</x:String>
   <x:String x:Key="Text.CreateBranch.BasedOn" xml:space="preserve">Based On :</x:String>
   <x:String x:Key="Text.CreateBranch.Checkout" xml:space="preserve">Check out after created</x:String>
