--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -2,7 +2,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
@@ -38,7 +37,7 @@
                         Classes="toggle_untracked"
                         Width="26" Height="14"
                         ToolTip.Tip="{DynamicResource Text.WorkingCopy.IncludeUntracked}"
-                        IsChecked="{Binding $parent[v:Repository].DataContext.(vm:Repository).IncludeUntracked, Mode=TwoWay}"/>
+                        IsChecked="{Binding IncludeUntracked, Mode=TwoWay}"/>
           <Button Grid.Column="7"
                   Classes="icon_button"
                   Width="26" Height="14"
@@ -65,7 +64,7 @@
 
       <!-- Unstaged Changes -->
       <v:ChangeCollectionView Grid.Row="1"
-                              IsWorkingCopy="True"
+                              IsWorkingCopyChange="True"
                               SingleSelect="False"
                               Background="{DynamicResource Brush.Contents}"
                               ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=UnstagedChangeViewMode}"
@@ -99,7 +98,7 @@
 
       <!-- Staged Changes -->
       <v:ChangeCollectionView Grid.Row="3"
-                              IsWorkingCopy="False"
+                              IsWorkingCopyChange="False"
                               SingleSelect="False"
                               Background="{DynamicResource Brush.Contents}"
                               ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=StagedChangeViewMode}"
